scss/modules/_news.scss
@use "sass:map";

$cardColors: (
  ".card-gray": $software-color,
  ".card-green": $marketing-color,
);

.news{
    overflow-x:hidden;
    .container{
        margin-bottom: 50px;
    }
}

.news-item{
    padding: 0;
    border-radius: 0.25rem;
    text-align:left;
    &:hover{
        top: -10px;    
        & h4, & p{
            color: $body-color;
        }
    }
}

@each $cardName, $color in $cardColors {
    #{$cardName}, #{$cardName}:hover {  
        background-color: $white;
        color: $body-color;
        & span.btn, span.btn-flag{
            background-color: #{$color};
            color: $white;
        }
        & h4{
            color: #{$color};
        }
    }
}

.news-wrap{
    padding:30px;
}

.news-item h4{
    font-size: 1rem;
    font-weight:bold;
    margin-bottom:30px;
}

.news-item p{
    color: $body-color;
}


.btn-flag{    
    position:absolute;
    z-index: 1;
    margin-left:auto;
    top: 10px;
    right:0;
    color: $white;
    font-size: 0.75rem;
    padding: 3px 10px;
    font-weight: 600;
    border-radius: 0;
    &:hover{
        color:$white;
        text-decoration:underline;
    }
}

.author{
    display: table;
    border-top: 1px solid #ccc;
    padding-top: 30px;
    margin-top: 30px;
    width: 100%;
    font-size: .875rem;
}

.avatar, .info{
    display:table-cell;
    vertical-align: middle;
}

.info strong{
    color: $primary-color;
}


.logo-bar{
    padding: 50px 0;
}


//CLIENTS
.clients{
    display:none;
}

.client-strip{
    display: flex;
    justify-content:space-around;
    padding: 0 0 50px 0;
    margin: 0;
}

.client{
    flex-grow: 1;
    display: inline-flex;
    justify-content: center;
    padding: 50px 20px 0 20px;
    position:relative;

    & img{
        max-width: 100%;        
        filter: grayscale(100%) opacity(80%);      
    }

    &:hover{
        & img{
            filter:none;
        }
        & .explainer{
            display:block;
        }
    }



    & .explainer{
        position: absolute;
        bottom: 100%;
        width: 260px;
        padding:20px;
        background-color: $primary-color;
        color: $white;
        text-align:center;
        display:none;

        & h3{
            font-size:1.125rem;
            padding-bottom: 2rem;
            margin-bottom:0;
            &::after{
                content: "";
                position: absolute;
                top: 55px;
                left: 0;
                right: 0;
                margin: auto;
                width: 28px;
                height: 3px;
                display: block;
                background-color: #fff;
            }
        }

        & p{
            font-size: 0.8125rem;
            margin-bottom:0;
        }

        & .arrow{
            @include triangle($primary-color, 36px);
            position: absolute;
            bottom: -35px;
            left: 94px;
        }

    }
}

@media(min-width:map.get($breakpoints,"md")){
    .clients{
        display:block;
    }

    .news-items>:last-child{
        display:none;
    }    
}
@media(min-width:1200px){
    .news-items>:last-child{
        display:block;
    }    
}

@media(min-width:map.get($breakpoints,"xl")){
    .news-items>:last-child{
        display:block;
    }    
}

